quorum/test/tests/TypeChecker/Pass/ImpAssignBooleanBoolObj.quorum
Boolean bool
bool:SetValue(true)
boolean b = bool