quorum/test/tests/TypeChecker/Fail/ImpAssignIntegerBoolObj.quorum
Boolean bool
bool:setValue(true)
integer i = bool